--- a/src/App.css
+++ b/src/App.css
@@ -7,5 +7,11 @@
   @apply flex gap-4;
 }
 .cart-container {
-  @apply border p-4;
+  @apply p-4;
+}
+.carts {
+  @apply mt-5;
+}
+.cart {
+  @apply p-3 border rounded-2xl border-amber-300 flex justify-between items-center gap-5 my-3;
 }
