--- a/src/Components/Bottle/Bottle.css
+++ b/src/Components/Bottle/Bottle.css
@@ -1,11 +1,17 @@
 @import "tailwindcss";
 
 .singleBottle {
-  @apply border p-5 space-y-2;
+  @apply px-5 py-8 space-y-4 shadow-xl rounded-2xl bg-[#fffef1];
 }
 .imgContainer {
-  @apply w-56 mx-auto;
+  @apply w-56 mx-auto rounded-2xl;
+}
+.imgContainer img {
+  @apply rounded-2xl;
 }
 .btn {
-  @apply bg-amber-600 px-3 py-2 rounded-2xl;
+  @apply bg-amber-400 px-18 py-2 rounded-2xl text-lg cursor-pointer;
+}
+.badge {
+  @apply border border-red-400 text-red-400 px-3 py-2 rounded-2xl animate-pulse;
 }
